stylized the page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="icon" href="favicon.gif">
-        <!-- Place favicon.ico in the root directory -->
 
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -20,7 +20,7 @@
         <![endif]-->
 
 <main>
-  <h1></h1>
+  <h1 class="text-center">Jeu - Pierre,Feuille,Ciseaux</h1>
 
   <p></p>
 </main>
