main.js: added probability + css: change position of content

--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-<main>
-  <h1 class="text-center">Jeu - Pierre,Feuille,Ciseaux</h1>
+        <h1 class="text-center">Jeu - Pierre,Feuille,Ciseaux</h1>
 
-<button type="button" onclick="game()">Jouer</button>
-<div class="">
+<main>
+
+<button class="ml-5" type="button" onclick="game()">Jouer</button>
+<div class="ml-5">
   <p id="choixJoueur"></p>
   <p id="choixOrdi"></p>
+  <p id="resultat"></p>
 </div>
 
-<div class="">
+<div class="ml-5">
   <p id="pointJoueur"></p>
   <p id="pointOrdi"></p>
+  <p id="winner"></p>
 </div>
 
 </main>
