--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+
         <h1 class="text-center">Jeu - Pierre,Feuille,Ciseaux</h1>
 
 <main>
 
 <button class="ml-5" type="button" onclick="game()">Jouer</button>
-<div class="ml-5">
+<div class="result ml-5">
   <p id="choixJoueur"></p>
   <p id="choixOrdi"></p>
   <p id="resultat"></p>
